ghc-4335c07/testsuite/tests/rename/should_compile/rn061.hs

module Foo (module Prelude) where

