ghc-4335c07/testsuite/tests/rename/should_fail/T5385.hs
module T5385 where

import T5385a( (:::) )
